--- a/app.json
+++ b/app.json
@@ -36,9 +36,12 @@
       [
         "expo-font",
         {
-          "fonts": ["./assets/fonts/Lato-Bold.ttf"]
+          "fonts": [
+            "./assets/fonts/Lato-Bold.ttf"
+          ]
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
