--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image": "~2.0.0",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.5",
@@ -42,7 +43,7 @@
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "expo-image": "~2.0.0"
+    "expo-secure-store": "~14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
